etc/tests/fuzz/errors/parser/lexer-c-comment-stops.nshape
shape parser-lexer-c-comment-stops {
  family "compiler-errors/parser"
  generator "error"
  features ["error", "parser", "negative", "diagnostic"]
  template ny-compile-fail
  expect compile_fail
  source ny <<'NY'
use std.core

// C-style comments must remain a hard lexer error, not a warning.

fn main() { 0 }
main()
NY
}
